# asn1c

asn1c/: asn1c.c
libasn1compiler/: asn1c_C.c  asn1c_misc.c  asn1compiler.h
skeletons/: BIT_STRING.c  CMakeLists.txt  INTEGER.c  NativeEnumerated.c  OCTET_STRING.c  asn_SET_OF.c  asn_internal.h  asn_system.h  constr_CHOICE.c  constr_SEQUENCE_OF.c  constr_SET_OF.c  constr_TYPE.c  file-dependencies  per_encoder.c  per_opentype.c
